infra/k8s-prod/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: www.miguelmartinez.dev
      http:
        paths:
          - path: /api/current_user
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /api/logout
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /auth/google
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /auth/facebook
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.miguelmartinez.dev'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
